crates/strider-analyze/tests/snapshots/arm__builtins__clz64.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v11" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "10" -> "v11" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v12" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "10" -> "v12" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "9" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "10" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "13" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v12" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "13" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "19" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="φ r0", shape=house, fillcolor="#163030"];
  "13" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "20" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x20:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="φ r0", shape=house, fillcolor="#163030"];
  "9" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "23" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="Lzcount\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="φ r0", shape=house, fillcolor="#163030"];
  "5" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" [label="Lzcount\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "17" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
